# deep_checker

./: .gitignore  README.md  Rapport.md
Diapo/: Diapo.aux  Diapo.bcf  Diapo.fdb_latexmk  Diapo.fls  Diapo.nav  Diapo.out  Diapo.run.xml  Diapo.tex  Diapo.toc  Diapo.vrb
simulator/: CMakeLists.txt  game.c  game.h  interactive.c  simulator.c  test.c  tournament.c  utils.c  utils.h  vector.c  vector.h
statistics/: data.py  example.csv  knn.py  knn.save  knn_old.py  mlp.py  mlp.save  model.save  scores.save  train_knn.py  train_mlp.py  utils.py
